k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genreports
  labels:
    name: genreports
    app: genreports-api
    environment: production
